--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Thêm Zalo SDK vào trong file index.html -->
   <script src="https://statis.zalopay.vn/sdk/sdk.min.js"></script>
 
-  <script type="module" src="/src/app.ts"></script>
+  <script type="module" src="/src/app.tsx"></script>
 </body>
 
 </html>
